--- a/assignment/Assignment 1.Rmd
+++ b/assignment/Assignment 1.Rmd
@@ -28,3 +28,28 @@ sum(Child$Freq,na.rm=TRUE)
 ##the numver of adults on Titanic:
 sum(Adult$Freq,na.rm=TRUE)
 ```
+
+To determine the number of male adult and female adult, I further selected subset from the Adult on Titanic data set previously developed. I then use the 'sum()' function again to calculate the number of male adult and female adult on Titanic.
+```{r echo=TRUE, eval=TRUE}
+Male_Adult <- Adult[Adult$Sex=="Male",]
+Female_Adult <- Adult[Adult$Sex=="Female",]
+
+##the number of male adult on Titanic:
+Male_Adult_number <- sum(Male_Adult$Freq,na.rm=TRUE)
+##the numver of female adult on Titanic:
+Female_Adult_number <- sum(Female_Adult$Freq,na.rm=TRUE)
+```
+
+
+Finally, a 'if' and 'else if' statment is used to print out the result.
+```{r echo=TRUE, eval=TRUE}
+
+if(Male_Adult_number > Female_Adult_number){
+   print("There are more male adults on Titanic")
+} else if (Male_Adult_number < Female_Adult_number){
+  print("There are more female adults on Titanic")
+} else if(Male_Adult_number == Female_Adult_number){
+  print("There are same amount of male and female on Titanic")
+}
+```
+
